# veta_boletos_parser

./: .gitignore  banco_invico_sdo_final.py  consolidar_boletos.py  parse_boleto.py  pyproject.toml  veta_boletos_parser.py  veta_eod_parser.py
